7/19/12 Renamed ImmutableVector2D->Vector2D, see #3374
7/19/12 Renamed Vector2D->MutableVector2D, see #3374
7/19/12 Changed the Vector2D hierarchy from "Vector2D extends ImmutableVector2D" to "Vector2D extends AbstractVector2D + ImmutableVector2D extends AbstractVector2D", see #3374
7/19/12 Moved more methods from ImmutableVector2D to AbstractVector2D, see #3374
7/19/12 Extracted AbstractVector2D as superclass of ImmutableVector2D, see #3374
7/19/12 Added Lombok and Functional Java as dependencies, see #3390
7/17/12 add BufferedImageUtils.toImage(Icon)
7/11/12 #3375, Load the audio input stream and decorate with a BufferedInputStream to support mark/reset, see #3375
6/29/12 #3364, clicking on the sponsor image opens a web browser to the URL
6/19/12 Added mathematics-related classes: Optimization1D for one-dimensional function minimization, and double-versions of the very useful Ray and Plane classes used in 3D sims.
6/12/12 Added DampedMassSpringSystem for solving second-order linear differential equations (which is the same as a damped spring system)
6/10/12 Added "subtract" method to IntegerProperty
5/29/12 #3166 removed check for -sponsorPrototype command line arg, presence of sponsor.properties alone will trigger feature
5/29/12 #3166 i18n of sponsor feature
5/8/2012 #3326 Converted from InternalError to HeadlessException in catch block
5/8/2012 #3326 Provide headless support for FrameSetup so that it can be created without crashing the build process on Ubuntu
5/3/2012 #3320 Fixed: equality test is incorrect for ObservableList
4/12/12 #3303 replace Java 1.6 calls with Java 1.5 workaround to implement nearest-neighbor rounding in DefaultDecimalFormat
4/12/12 #3304 Fixed: Exception when attempting to authenticate mongodb when there is no internet connection, resolves #3304
4/2/12 Added convenience method Pairs.pair so pairs can be constructed with "pair(a,b)" instead of "new Pair<MyLongTypeNameForTypeA,MyLongTypeNameForTypeB>(a,b)"